fix spacing / alt image tags

--- a/src/Components/VideoCard.module.scss
+++ b/src/Components/VideoCard.module.scss
@@ -1,6 +1,6 @@
 .videoCardContainer {
-  flex: 1 0 21%;
-  margin: 2rem;
+  flex-basis: 23%;
+  margin: 1rem;
   min-height: 5rem;
   background-color: #ffffff;
   border-radius: 5px;
@@ -34,6 +34,7 @@
   }
   .infoContainer {
     padding: 1rem;
+    padding-top: 0.5rem;
     span {
       font-weight: bold;
     }
